--- a/blog-frontend/src/index.scss
+++ b/blog-frontend/src/index.scss
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+// Override default variables before the import
+
+// Import Bootstrap and its default variables
+@import '~bootstrap/scss/bootstrap.scss';
